counting working hours

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -144,6 +144,7 @@
                 </th>
             </tr>
             <tr ng-repeat='i in $ctrl.numberOfDays track by $index'>
+                <td ng-style="$ctrl.printStyle">{{i.day}}</td>
                 <td ng-style="$ctrl.printStyle">{{$index +1}}</td>
                 <td ng-style="$ctrl.printStyle" ng-repeat-start="emp in $ctrl.employees track by $index">
                     {{emp.from[$parent.$index]}}
@@ -169,6 +170,29 @@
                 <td ng-style="$ctrl.printStyle" colspan="4" ng-repeat="emp in $ctrl.employees track by $index">
                     {{emp.totalSum - $ctrl.hoursPerMonth }}
                 </td>
+            </tr>
+            <tr>
+                <td ng-style="$ctrl.printStyle" colspan="6" style="text-align: left;padding-left:10px">Legenda:</td>
+            </tr>
+            <tr>
+                <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:red">DUW</td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- dni ustawowo wolne</td>
+            </tr>
+            <tr>
+                <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:yellow">ZW</td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- zadeklarowane wolne</td>
+            </tr>
+            <tr>
+                <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:#D3D3D3"></td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">weekend</td>
+            </tr>
+            <tr>
+                <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:hotpink">U</td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- urlop</td>
+            </tr>
+            <tr>
+                <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:green">L4</td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">/- L4</td>
             </tr>
             </tbody>
         </table>
