Debug flag in run.py, Angular script import moved to base template

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -17,3 +17,8 @@
 </div>
 {% endif %}
 {% endblock %}
+
+{% block tail %}
+<script src="{{ url_for('static', filename='vendor.bundle.js') }}"></script>
+<script src="{{ url_for('static', filename='app.bundle.js') }}"></script>
+{% endblock %}
