--- a/main/timetable/client/app/components/home/home.html
+++ b/main/timetable/client/app/components/home/home.html
@@ -3,9 +3,16 @@
         <tbody>
         <tr style="width:130px">
             <th>
-                <input class="form-control"
-                       placeholder='nazwa salonu'
-                       ng-model="$ctrl.salonName" type="text"> </input>
+                <div style="width:130px" class="dropdown">
+                    <button style="width:130px" class="btn btn-default dropdown-toggle" type="button"
+                            data-toggle="dropdown">
+                        {{$ctrl.currentShop}}
+                    </button>
+                    <ul style="width:130px" class="dropdown-menu" ng-model="$ctrl.availableShops">
+                        <li ng-click='$ctrl.changeShop(shop)' ng-repeat="shop in $ctrl.availableShops"><a
+                                href="#">{{shop}}</a></li>
+                    </ul>
+                </div>
             </th>
             <th style='vertical-align: bottom; width:20px;' rowspan="3"> D</th>
             <th ng-repeat="i in $ctrl.employees track by $index" colspan="4"> Pracownik</th>
@@ -30,10 +37,7 @@
                 </div>
             </th>
             <th ng-repeat="i in $ctrl.employees track by $index" colspan="4">
-                <input
-                        class="form-control"
-                        placeholder='wpisz nazwę'
-                        ng-model="i.id" type="text">
+                {{i.name}}
             </th>
         </tr>
         <tr>
@@ -173,11 +177,15 @@
             </tr>
             <tr>
                 <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:red">DUW</td>
-                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- dni ustawowo wolne</td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- dni ustawowo
+                    wolne
+                </td>
             </tr>
             <tr>
                 <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:yellow">ZW</td>
-                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- zadeklarowane wolne</td>
+                <td ng-style="$ctrl.printStyle" colspan="5" style="text-align: left;padding-left:10px">- zadeklarowane
+                    wolne
+                </td>
             </tr>
             <tr>
                 <td ng-style="$ctrl.printStyle" colspan="1" style="text-align: center;background-color:#D3D3D3"></td>
