--- a/main/timetable/client/app/components/home/home.html
+++ b/main/timetable/client/app/components/home/home.html
@@ -22,6 +22,10 @@
             <th>
                 <button class="btn btn-default" type="button" ng-click="$ctrl.printFile()">drukuj</button>
             </th>
+            <th>
+                <button class="btn btn-default" type="button" ng-click="$ctrl.save()">zapisz grafik</button>
+            </th>
+
         </tr>
         <tr style="width:140px">
             <th>
