--- a/main/templates/table.html
+++ b/main/templates/table.html
@@ -12,3 +12,8 @@
     </app>
 </div>
 {% endblock body %}
+
+{% block tail %}
+<script src="{{ url_for('static', filename='vendor.bundle.js') }}"></script>
+<script src="{{ url_for('static', filename='app.bundle.js') }}"></script>
+{% endblock %}
