fix hours counting && disable editing for normal users

--- a/main/timetable/client/app/components/home/home.html
+++ b/main/timetable/client/app/components/home/home.html
@@ -25,6 +25,9 @@
             <th>
                 <button class="btn btn-default" type="button" ng-click="$ctrl.save()">zapisz grafik</button>
             </th>
+            <th>
+                <button class="btn btn-default" type="button" ng-click="$ctrl.randomize()">losuj ustawienie</button>
+            </th>
 
         </tr>
         <tr style="width:140px">
