--- a/main/timetable/client/app/components/home/home.html
+++ b/main/timetable/client/app/components/home/home.html
@@ -23,12 +23,10 @@
                 <button class="btn btn-default" type="button" ng-click="$ctrl.printFile()">drukuj</button>
             </th>
             <th>
-                <button class="btn btn-default" type="button" ng-click="$ctrl.save()">zapisz grafik</button>
+                <button class="btn btn-default" type="button" ng-show="$ctrl.editable" ng-click="$ctrl.save()">
+                    zapisz grafik
+                </button>
             </th>
-            <th>
-                <button class="btn btn-default" type="button" ng-click="$ctrl.randomize()">losuj ustawienie</button>
-            </th>
-
         </tr>
         <tr style="width:140px">
             <th>
@@ -45,6 +43,11 @@
             </th>
             <th ng-repeat="i in $ctrl.employees track by $index" colspan="4">
                 {{i.name}}
+            </th>
+            <th>
+                <button class="btn btn-default" type="button" ng-show="$ctrl.editable" ng-click="$ctrl.randomize()">
+                    losuj ustawienie
+                </button>
             </th>
         </tr>
         <tr>
@@ -69,12 +72,12 @@
             <td ng-repeat-start="emp in $ctrl.employees track by $index">
 
                 <input ng-style="$ctrl.setRowStyle(i)"
-                       ng-disabled="i.isHoliday"
+                       ng-disabled="i.isHoliday || !$ctrl.editable"
                        ng-change="$ctrl.countSum(emp, $parent.$index)"
                        ng-model='emp.from[$parent.$index]'
                        class="form-control-hours" min="0" max="23" type="number"> </input></td>
             <td><input ng-style="$ctrl.setRowStyle(i)"
-                       ng-disabled="i.isHoliday"
+                       ng-disabled="i.isHoliday || !$ctrl.editable"
                        ng-change="$ctrl.countSum(emp, $parent.$index)"
                        ng-model='emp.to[$parent.$index]' min="0" max="23"
                        class="form-control-hours" type="number"> </input></td>
